fix(testimonials): fixes margin on smaller screens

--- a/css/_component.testimonial.css
+++ b/css/_component.testimonial.css
@@ -1,6 +1,4 @@
 .testimonial {
-	@apply --container;
-
 	position: relative;
 
 	&::before {
